--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <title>Program za računanje zapremine valjka</title>
     </head>
     <body>
         <script>
